test/error/DocCodeUnterminated.ci
public static class Test
{
	/// Returns `true
	public static bool Run() => true; //ERROR: Unterminated code in documentation comment
}
